# okmethod

./:  workspace.code-workspace  CLAUDE.md  README.md  docs.code-workspace  practices.code-workspace  workspace.code-workspace
.claude-plugin/: marketplace.json
docs/: README.md
docs/architecting-guide/: 01-style.md  03-mechanics.md  README.md
docs/coding-guide/: 01-code.md  02-logic.md  03-system.md  README.md  cohesion-coupling-cheatsheet.md  comment-guide.md  naming-cheatsheet.md  naming-guide.md  style-guide.md
docs/coding-principles/: README.md
docs/development-domains/architecting-principles/: README.md  SKILL.md
docs/development-domains/architecting-principles/assets/: 01-organization.md  02-layout.md  02-structure.md  03-mechanics.md  GoF-design-patterns-cheatsheet.md  architecture-case-study.md  architecture-styles-cheatsheet.md  clean-architecture-case-study.md
docs/development-domains/coding-principles/: README.md  SKILL.md
docs/development-domains/coding-principles/assets/: 01-code.md  02-logic.md  03-system.md
docs/development-domains/planning-principles/: README.md  SKILL.md
docs/development-domains/planning-principles/assets/: 01-requirement.md  02-business.md  03-specification.md  documentations-cheatsheet.md  non-functional-requirements-overiew.md
docs/development-domains/testing-principles/: README.md  SKILL.md
docs/development-domains/testing-principles/assets/: 01-approach.md  02-layer.md  03-verification.md  coevolution-case-study.md  documentations-cheatsheet.md  layer-assignment-cheatsheet.md
docs/planning-guide/: 01-requirement.md  02-business.md  03-specification.md  README.md
docs/readable-code/: README.md  naming-convention.md
docs/references/: ddia-overview.md  ipa-dss-overview-v1.2.md  ipa-dss-overview-v2.0.md  ipa-dss-overview.md  oss-license-overview.md  oss-license.md  ppl-overview.md  public-cloud-map.md  seci-model-overview.md  security-governance-overview.md  web-security-overview.md
docs/specialty-domains/: claude-code.md  dialectics-engineering.md  docker-tips.md  rugby-team-theory.md  security-overview.md  terraform-tips.md  typescript-tips.md  web-security-tips.md
docs/tips/: Docker.md  Github.md  GithubAction.md  Python.md  TypeScript.md  ipa-dss.md  oss-license.md
practices/: compose.yaml
practices/backends/go-gin/: .air.toml  Dockerfile  README.md  go.mod  main.go  main_test.go
practices/backends/go-gin/routes/: heartbeat.go
practices/backends/go-gin/types/: heartbeat.go
practices/backends/java-spring/: README.md  pom.xml
practices/backends/java-spring/src/main/java/edu/self/: App.java
practices/backends/python-fastapi/: Dockerfile  README.md  pyproject.toml
practices/backends/python-fastapi/src/: main.py
practices/backends/python-fastapi/src/routes/: api.py  heartbeat.py
practices/backends/python-fastapi/src/schemas/: heartbeat.py
practices/backends/python-fastapi/tests/routes/: conftest.py  test_api.py
practices/backends/ruby-rails/: README.md
practices/backends/typescript-express/: README.md  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json
practices/backends/typescript-express/src/: server.ts
practices/backends/typescript-express/src/routes/: heartbeat.ts
practices/backends/typescript-express/src/types/: heartbeat.ts
practices/backends/typescript-express/tests/: server.test.ts
practices/frontends/typescript-svelte/: Dockerfile  README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
practices/frontends/typescript-svelte/src/lib/api/: getHeartbeat.ts
practices/frontends/typescript-svelte/src/lib/utils/: request.ts
practices/frontends/typescript-svelte/src/routes/: +layout.svelte  +page.svelte
practices/frontends/typescript-svelte/src/routes/(root)/: +page.svelte
practices/fullstacks/ruby-on-rails/: README.md  compose.yaml
practices/fullstacks/ruby-on-rails/config/: application.rb  credentials.yml.enc
practices/fullstacks/t3-stack/: Dockerfile  README.md  compose.yaml  package-lock.json  package.json
